--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,106 +1,5 @@
 @import './global.css';
+@import './header.css';
+@import './introducao.css';
+@import './experiencia.css';
 
-.header {
-  padding: 40px 20px; /* se quiser adicionar um background, vai pegar em todo .header */
-  max-width: 1200px; /* pra parar de crescer indefinidamente */
-  margin: 0px auto; /* centralizar */
-  display: flex;
-  align-items: center; 
-  justify-content: space-between;
-}
-
-.header h1{
-  white-space: nowrap; /* não quebrar palavra */
-  font-size: 3rem;
-}
-
-.header-menu {
-  display: flex;
-  gap: 20px;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-
-.header-menu a {
-  display: block; /* nos links, para melhor funcionamento do padding */ 
-  text-decoration: none;
-  color: #141414;
-  padding: 20px 10px;
-  font-size: 1.125rem;
-}
-
-@media (max-width: 800px) {
-  .header{
-    flex-direction: column;
-    gap: 30px;
-    padding: 20px;
-  }
-
-  .header-menu a {
-    background-color: #f5f5f5;
-    border-radius: 4px;
-  }  
-}
-
-
-.perfil {
-  /* object-fit: cover;
-  object-position: top right; */
-  height: 520px;
-  width: 360px;
-}
-
-.descricao {
-  display: grid;
-  gap: 0px 120px;
-  grid-template-columns: 360px auto;
-  align-items: center;
-  justify-content: left;
-  margin-top: 60px;
-}
-
-.cargo {
-  font-size: 4rem;
-  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  position: relative;
-}
-
-.cargo::before {
-  content: url(/img/detalhe.svg);
-  z-index: -9;
-  position: absolute;
-  left: -40px;
-  top: -40px;
-}
-
-.localizacao{
-  font-size: 1.125rem;
-  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-}
-
-.emoji{
-  font-size: 1.5rem;
-  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-}
-
-.experiencia{
-  display: grid;
-  grid-template-columns: 360px 1fr;
-}
-
-.experiencia h3{
-  font-size: 8rem;
-  color: #E0E0E0;
-  text-transform: uppercase;
-  font-weight: bold;
-  word-wrap: break-word;
-}
-
-.experiencia-topicos{
-  display: grid;
-}
-
-.experiencia-descricao{
-  justify-self: center;
-  text-align: center;
-}
