--- a/CSS/experiencia.css
+++ b/CSS/experiencia.css
@@ -31,12 +31,89 @@
     margin-bottom: 20px;
     border-radius: 4px;
     position: relative;
+    gap: 10px 20px;
+}
+
+.empresa::before{
+    content: '';
+    display: block;
+    width: 4px;
+    height: 20px;
+    background: linear-gradient(#b6f829, #67dd0a);
+    position: absolute;
+    top: 20px;
+    left: -4px;
 }
 
 .empresa-ano{
     position: absolute;
-    top: 20px;
+    top: 22px;
     left: -80px;
     color: #525252;
     font-size: 0.875rem;
+    text-align: right;
+    width: 60px;
+}
+
+.empresa-titulo{
+    font-size: 1.125rem;
+    line-height: 1.1;
+    font-weight: bold;
+}
+
+.empresa-texto{
+    font-size: 0.875rem;
+    color: #525252;
+    line-height: 1.4;
+}
+
+.empresa-habilidades{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    align-content: start;
+}
+
+.empresa-habilidades li{
+    font-size: 0.875rem;
+    line-height: 1.4;
+    background: #ffffff;
+    padding: 5px 10px;
+    border-radius: 4px;
+}
+
+@media(max-width: 800px){
+    .experiencia{
+        grid-template-columns: 1fr;
+        justify-items: center;
+        padding: 20px 20px;
+        gap: 40px
+    }
+
+    .experiencia .subtitulo{
+        color: #000000;
+    }
+
+    .experiencia-texto{
+        font-size: 1.2rem;
+        max-width: initial;
+        text-align: center;
+    }
+
+    .empresa{
+        margin-bottom: 50px;
+    }
+
+    .empresa-ano{
+        top:-20px;
+        left: 0px;
+        text-align: initial;
+    }
+}
+
+@media(max-width: 500px){
+    .empresa{
+        grid-template-columns: 1fr;
+        gap: 20px;
+    }
 }
