--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,4 +2,5 @@
 @import './header.css';
 @import './introducao.css';
 @import './experiencia.css';
-
+@import './formacao.css';
+@import './rodape.css';
